@@ -1,3 +1,6 @@
+2012-05-28 Graeme Gott <graeme@gottcode.org>
+	* Add locale dialog.
+
 2012-05-16 Graeme Gott <graeme@gottcode.org>
 	* FIXED: Twisty boards sometimes have words that touch incorrectly.
 
